updated document title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/index.css">
-    <title>Document</title>
+    <title>Grid-practice</title>
 </head>
 <body>
     <main class="main">
@@ -30,6 +30,5 @@
             <h1 class="title">My color palette</h1>
         </div>
     </main>
-    
 </body>
 </html>
